--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -67,3 +67,8 @@
     height: 40vmin;
     pointer-events: none;
 }
+
+.alert {
+    left: 27%;
+    width: 550px;
+}
