--- a/src/components/Printing/QuizzesDisplay.css
+++ b/src/components/Printing/QuizzesDisplay.css
@@ -22,3 +22,10 @@
     left: 100px;
 }
 
+.alert {
+    position: relative;
+    top: 30px;
+    /*left: 100px; */
+    right: 50px;
+}
+
